# CrestNol

./: .clang-format  CMakeLists.txt  README.md
src/: algoritm.cpp  algoritm.h  check.cpp  filecheck.cpp  main.cpp
